--- a/s3_website.yml
+++ b/s3_website.yml
@@ -1,7 +1,8 @@
 s3_id: <%= ENV['S3_ACCESS_KEY'] %>
 s3_secret: <%= ENV['S3_SECRET'] %>
 s3_bucket: andreacfm.com
-cloudfront_distribution_id: E3W18XIN8Q3SME
+cloudfront_distribution_id: E1B2DZR9HI3XO2
+s3_endpoint: eu-west-1
 
 # Below are examples of all the available configurations.
 # See README for more detailed info on each of them.
